--- a/mystyle.css
+++ b/mystyle.css
@@ -188,6 +188,40 @@
   font-weight: bold;
 }
 
-.word-break{
+.word-break {
   word-break: break-all;
 }
+
+
+/*文字rwd*/
+.rwdh6 {
+  font-size: 1.2rem;
+}
+.rwdtxt {
+  font-size: 0.8rem;
+}
+@media (max-width: 599px) {
+  .rwdtxt {
+   font-size: calc(0.8rem + (1.3-1.2) * ((100vw - 600px) / (1200 - 600)));
+  }
+  .rwdh6 {
+    font-size: calc(1.1rem + (1.3-1.2) * ((100vw - 600px) / (1200 - 600)));
+   }
+}
+@media (min-width: 600px) and (max-width: 1200px) {
+  .rwdtxt {
+   font-size: calc(0.8rem + (1.3-1.2) * ((100vw - 600px) / (1200 - 600)));
+  }
+  .rwdh6 {
+    font-size: calc(1.2rem + (1.3-1.2) * ((100vw - 600px) / (1200 - 600)));
+   }
+}
+@media (min-width: 1200px) {
+  .rwdtxt {
+     font-size: 0.95rem;
+  }
+  .rwdh6 {
+    font-size: 1.2rem;
+ }
+}
+
