--- a/mystyle.css
+++ b/mystyle.css
@@ -119,7 +119,6 @@
 
 .w3-third {
   float: left;
-
 }
 
 /*圖片淡入文字*/
@@ -131,6 +130,7 @@
   display: block;
   width: 100%;
   height: auto;
+  /* padding: 16px; */
 }
 
 .overlay {
@@ -435,4 +435,20 @@
     transform: translate(0%, -50%);
     -ms-transform: translate(-0%, -50%)
   }
+}
+
+.section-title {
+  display: flex;
+  align-items: center;        /* 垂直置中 */
+  justify-content: center;    /* 水平置中 */
+  color: #6c6c6c;
+  font-weight: bold;
+  font-size: 1.2rem;
+  width: 100%;
+  height: 40px;                /* 增高一點以容納 padding */
+  border: 2px solid rgb(108, 108, 108);
+  border-radius: 8px;
+  background-color: transparent;
+  margin: 10px 0;
+  box-sizing: border-box;
 }
